// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an blog page with a post unchanged 1`] = `
<div>
  <nav
    class="navigation"
  >
    <div
      class="container"
    >
      <ul
        class="topLinks"
      >
        <li
          class="logo"
        >
          <a
            href="/"
            title="Home"
          >
            <img
              alt="Tania Papazafeiropoulou"
              src="/profile.svg"
            />
          </a>
        </li>
        <li>
          <a
            href="/work"
            title="Check out my work"
          >
            <div>
              Work
            </div>
          </a>
        </li>
        <li
          class="active"
        >
          <a
            href="/blog"
            title="Blog"
          >
            <div>
              Blog
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="bottomLinks"
      >
        <li>
          <a
            href="http://www.linkedin.com/in/taniapapazaf"
            target="_linkedin"
            title="Linkedin profile - in/taniapapazaf"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M384 384h177.106v90.782h2.532c24.64-44.194 84.958-90.782 174.842-90.782 186.946 0 221.52 116.376 221.52 267.734v308.266h-184.61v-273.278c0-65.184-1.334-149.026-96.028-149.026-96.148 0-110.82 70.986-110.82 144.292v278.012h-184.542v-576z M64 384h192v576h-192v-576z M256 224c0 53.019-42.981 96-96 96s-96-42.981-96-96c0-53.019 42.981-96 96-96s96 42.981 96 96z"
                fill="#0077b5"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            href="https://twitter.com/_Tany_"
            target="_twitter"
            title="Twitter profile - @_Tany_"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M1024 226.4c-37.6 16.8-78.2 28-120.6 33 43.4-26 76.6-67.2 92.4-116.2-40.6 24-85.6 41.6-133.4 51-38.4-40.8-93-66.2-153.4-66.2-116 0-210 94-210 210 0 16.4 1.8 32.4 5.4 47.8-174.6-8.8-329.4-92.4-433-219.6-18 31-28.4 67.2-28.4 105.6 0 72.8 37 137.2 93.4 174.8-34.4-1-66.8-10.6-95.2-26.2 0 0.8 0 1.8 0 2.6 0 101.8 72.4 186.8 168.6 206-17.6 4.8-36.2 7.4-55.4 7.4-13.6 0-26.6-1.4-39.6-3.8 26.8 83.4 104.4 144.2 196.2 146-72 56.4-162.4 90-261 90-17 0-33.6-1-50.2-3 93.2 59.8 203.6 94.4 322.2 94.4 386.4 0 597.8-320.2 597.8-597.8 0-9.2-0.2-18.2-0.6-27.2 41-29.4 76.6-66.4 104.8-108.6z"
                fill="#20a2f1"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            href="/TaniaPapazafeiropoulou-CV.pdf"
            target="_cv"
            title="Resume - Tania Papapazafeiropoulou"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M864 0h-768c-52.8 0-96 43.2-96 96v832c0 52.8 43.2 96 96 96h768c52.8 0 96-43.2 96-96v-832c0-52.8-43.2-96-96-96zM832 896h-704v-768h704v768zM256 576h448v64h-448zM256 704h448v64h-448zM320 288c0-53.019 42.981-96 96-96s96 42.981 96 96c0 53.019-42.981 96-96 96s-96-42.981-96-96zM480 384h-128c-52.8 0-96 28.8-96 64v64h320v-64c0-35.2-43.2-64-96-64z"
                fill="#7f7abb"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            href="mailto:hello@tany4.com"
            target="_email"
            title="Email - hello@tany4.com"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M928 128h-832c-52.8 0-96 43.2-96 96v640c0 52.8 43.2 96 96 96h832c52.8 0 96-43.2 96-96v-640c0-52.8-43.2-96-96-96zM398.74 550.372l-270.74 210.892v-501.642l270.74 290.75zM176.38 256h671.24l-335.62 252-335.62-252zM409.288 561.698l102.712 110.302 102.71-110.302 210.554 270.302h-626.528l210.552-270.302zM625.26 550.372l270.74-290.75v501.642l-270.74-210.892z"
                fill="#2d648e"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <aside
    class="statusBar"
  >
    <a
      class="name"
      href="/"
    >
      Tania
    </a>
    <span
      class="title"
    >
      Front end & Mobile developer
    </span>
  </aside>
  <div
    class="contentContainer "
  >
    <main>
      <section
        class="blog"
      >
        <h1>
          Blog
        </h1>
        <ul>
          <li
            style="background-color: rgb(34, 34, 34);"
          >
            <a
              href="/blog/posts/123"
            >
              <img
                src="blog/banner-path"
              />
              <div
                class="content"
              >
                <b>
                  I am the titel
                </b>
                <b>
                  <small>
                    I am the subtitle
                  </small>
                </b>
                <small>
                  <time
                    datetime="2020-12-19T15:49:00+0200"
                  >
                    19 December 2020
                  </time>
                </small>
              </div>
            </a>
          </li>
        </ul>
      </section>
    </main>
  </div>
  <footer
    class="footer"
  >
    <aside
      class="created"
    >
      Created by 
      <a
        href="http://www.linkedin.com/in/taniapapazaf"
        target="_linkedin"
      >
        <b>
          Tania Papazafeiropoulou
        </b>
      </a>
    </aside>
  </footer>
</div>
`;

exports[`renders an empty blog page unchanged 1`] = `
<div>
  <nav
    class="navigation"
  >
    <div
      class="container"
    >
      <ul
        class="topLinks"
      >
        <li
          class="logo"
        >
          <a
            href="/"
            title="Home"
          >
            <img
              alt="Tania Papazafeiropoulou"
              src="/profile.svg"
            />
          </a>
        </li>
        <li>
          <a
            href="/work"
            title="Check out my work"
          >
            <div>
              Work
            </div>
          </a>
        </li>
        <li
          class="active"
        >
          <a
            href="/blog"
            title="Blog"
          >
            <div>
              Blog
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="bottomLinks"
      >
        <li>
          <a
            href="http://www.linkedin.com/in/taniapapazaf"
            target="_linkedin"
            title="Linkedin profile - in/taniapapazaf"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M384 384h177.106v90.782h2.532c24.64-44.194 84.958-90.782 174.842-90.782 186.946 0 221.52 116.376 221.52 267.734v308.266h-184.61v-273.278c0-65.184-1.334-149.026-96.028-149.026-96.148 0-110.82 70.986-110.82 144.292v278.012h-184.542v-576z M64 384h192v576h-192v-576z M256 224c0 53.019-42.981 96-96 96s-96-42.981-96-96c0-53.019 42.981-96 96-96s96 42.981 96 96z"
                fill="#0077b5"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            href="https://twitter.com/_Tany_"
            target="_twitter"
            title="Twitter profile - @_Tany_"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M1024 226.4c-37.6 16.8-78.2 28-120.6 33 43.4-26 76.6-67.2 92.4-116.2-40.6 24-85.6 41.6-133.4 51-38.4-40.8-93-66.2-153.4-66.2-116 0-210 94-210 210 0 16.4 1.8 32.4 5.4 47.8-174.6-8.8-329.4-92.4-433-219.6-18 31-28.4 67.2-28.4 105.6 0 72.8 37 137.2 93.4 174.8-34.4-1-66.8-10.6-95.2-26.2 0 0.8 0 1.8 0 2.6 0 101.8 72.4 186.8 168.6 206-17.6 4.8-36.2 7.4-55.4 7.4-13.6 0-26.6-1.4-39.6-3.8 26.8 83.4 104.4 144.2 196.2 146-72 56.4-162.4 90-261 90-17 0-33.6-1-50.2-3 93.2 59.8 203.6 94.4 322.2 94.4 386.4 0 597.8-320.2 597.8-597.8 0-9.2-0.2-18.2-0.6-27.2 41-29.4 76.6-66.4 104.8-108.6z"
                fill="#20a2f1"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            href="/TaniaPapazafeiropoulou-CV.pdf"
            target="_cv"
            title="Resume - Tania Papapazafeiropoulou"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M864 0h-768c-52.8 0-96 43.2-96 96v832c0 52.8 43.2 96 96 96h768c52.8 0 96-43.2 96-96v-832c0-52.8-43.2-96-96-96zM832 896h-704v-768h704v768zM256 576h448v64h-448zM256 704h448v64h-448zM320 288c0-53.019 42.981-96 96-96s96 42.981 96 96c0 53.019-42.981 96-96 96s-96-42.981-96-96zM480 384h-128c-52.8 0-96 28.8-96 64v64h320v-64c0-35.2-43.2-64-96-64z"
                fill="#7f7abb"
              />
            </svg>
          </a>
        </li>
        <li>
          <a
            href="mailto:hello@tany4.com"
            target="_email"
            title="Email - hello@tany4.com"
          >
            <svg
              viewBox="0 0 1024 1024"
            >
              <path
                d="M928 128h-832c-52.8 0-96 43.2-96 96v640c0 52.8 43.2 96 96 96h832c52.8 0 96-43.2 96-96v-640c0-52.8-43.2-96-96-96zM398.74 550.372l-270.74 210.892v-501.642l270.74 290.75zM176.38 256h671.24l-335.62 252-335.62-252zM409.288 561.698l102.712 110.302 102.71-110.302 210.554 270.302h-626.528l210.552-270.302zM625.26 550.372l270.74-290.75v501.642l-270.74-210.892z"
                fill="#2d648e"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <aside
    class="statusBar"
  >
    <a
      class="name"
      href="/"
    >
      Tania
    </a>
    <span
      class="title"
    >
      Front end & Mobile developer
    </span>
  </aside>
  <div
    class="contentContainer "
  >
    <main>
      <section
        class="blog"
      >
        <h1>
          Blog
        </h1>
        <ul />
      </section>
    </main>
  </div>
  <footer
    class="footer"
  >
    <aside
      class="created"
    >
      Created by 
      <a
        href="http://www.linkedin.com/in/taniapapazaf"
        target="_linkedin"
      >
        <b>
          Tania Papazafeiropoulou
        </b>
      </a>
    </aside>
  </footer>
</div>
`;
